--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ lean4-sys = { path = "lean4-sys" }
 lean4-macro = { path = "lean4-macro" }
 
 
-tokio = { version = "1.13", features = ["all"]}
+lazy_static = "1.4"
+scc = "1.8"
+tokio = { version = "^1", features = ["full"] }
 futures = { version = "0.3", features = ["std", "async-await"], default-features = false }
 
 [workspace]
